Refactor keyboard shortcuts, add sidebar component, and enhance Rclone service with remote management features

--- a/src/app/components/titlebar/titlebar.component.html
+++ b/src/app/components/titlebar/titlebar.component.html
@@ -67,7 +67,7 @@
 
     <button mat-menu-item (click)="openPreferencesModal()">
       <span>Preferences</span>
-      <span class="shortcut">Ctrl + S</span>
+      <span class="shortcut">Ctrl + ,</span>
     </button>
     <button mat-menu-item (click)="openKeyboardShortcutsModal()">
       <span>Keyboard Shortcuts</span>
