--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,119 +4,8 @@
   background-color: var(--app-background);
   color: var(--app-text-color);
 
-  p {
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-  }
-
-  .full-bar {
-    width: 100%;
-    height: 4.5vh;
-    min-height: 38px;
-    border-radius: 18px;
-    position: relative;
-    overflow: hidden;
-  }
-
-  .remote-header {
-    padding-top: 20px;
-    display: flex;
-    gap: 10px;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  mat-chip {
-    overflow: hidden;
-  }
-
-  .remote-card {
-    padding: 10px;
-    border-radius: 16px;
-    background: var(--secondary-background);
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    box-shadow: 0 0 8px var(--shadow-color);
-
-    &:hover {
-      background-color: var(--hover-color);
-    }
-  }
-
   mat-sidenav {
     width: var(--sidebar-width);
-    background-color: var(--sidebar-background);
-    color: var(--app-text-color);
-    border-right-color: var(--border-color);
-
-    .sidebar {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-
-      h3 {
-        font-size: 1.2rem;
-        display: flex;
-        align-items: center;
-        flex-direction: row;
-        justify-content: center;
-        gap: 10px;
-        position: sticky;
-        top: 0;
-        background-color: var(--app-background);
-        z-index: 10;
-        box-shadow: 0 2px 5px var(--shadow-color);
-        padding-block: 10px;
-      }
-
-      ul {
-        list-style: none;
-        padding: 10px 0px;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-      }
-
-      .remote-card {
-        margin-inline: 16px;
-
-        .card-content {
-          padding-block: 0px;
-          display: flex;
-          flex-direction: column;
-          gap: 10px;
-
-          h4 {
-            font-size: 1.3rem;
-          }
-
-          .mounted {
-            color: var(--green);
-          }
-
-          .not-mounted {
-            color: var(--orange);
-          }
-
-          .error {
-            color: var(--red);
-          }
-        }
-      }
-
-      .no-remotes {
-        font-size: 20px;
-        color: var(--secodary-text-color);
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        padding-block: 20px;
-      }
-    }
   }
 
   mat-sidenav-content {
@@ -136,264 +25,26 @@
       }
     }
 
-    .overview {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-
-      .info-card {
-        display: flex;
-        flex-direction: column;
-        align-items: baseline;
-        border-radius: 8px;
-        padding-block: 20px;
-        width: 84%;
-
-        h3 {
-          display: flex;
-          align-items: center;
-          gap: 10px;
-          margin-bottom: 10px;
-        }
-
-        .info-card-content {
-          display: flex;
-          flex-direction: column;
-          gap: 20px;
-          width: 100%;
-          padding-block: 10px;
-          border-radius: 8px;
-          background-color: var(--secondary-background);
-          box-shadow: 0 0 14px var(--shadow-color);
-
-          .overview-content {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            padding-inline: 10px;
-            gap: 10px;
-
-            .remotes-bar {
-              display: flex;
-
-              .bar {
-                height: 100%;
-                transition: width 0.5s ease-in-out;
-
-                &.mounted-bar {
-                  background-color: var(--green);
-                }
-
-                &.unmounted-bar {
-                  background-color: var(--purple);
-                }
-
-                &.error-bar {
-                  background-color: var(--red);
-                }
-              }
-            }
-
-            .legend {
-              display: flex;
-              gap: 15px;
-              margin-top: 10px;
-
-              .legend-item {
-                display: flex;
-                align-items: center;
-                font-size: 14px;
-
-                .color-box {
-                  width: 20px;
-                  height: 20px;
-                  border-radius: 5px;
-                  display: inline-block;
-                  margin-right: 5px;
-                }
-              }
-
-              .mounted {
-                background-color: var(--green);
-              }
-
-              .unmounted {
-                background-color: var(--purple);
-              }
-
-              .error {
-                background-color: var(--red);
-              }
-            }
-          }
-        }
-      }
-
-      .remote-list {
-        display: flex;
-        overflow-x: auto;
-        gap: 10px;
-        padding: 10px;
-        border-radius: 16px;
-        background-color: #e6e3e3;
-        box-shadow: 0 0 8px var(--shadow-color);
-
-        .remote-card {
-          align-items: center;
-
-          .remote-content {
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-            padding: 10px;
-
-            h4 {
-              font-size: 20px;
-              text-wrap: nowrap;
-            }
-          }
-        }
-      }
-    }
-
-    .remote-details {
-      display: flex;
-      width: 100%;
-      flex-direction: column;
-      align-items: center;
-      margin-block: 20px;
-      flex: 1;
-
-      .info-card {
-        display: flex;
-        flex-direction: column;
-        align-items: baseline;
-        border-radius: 8px;
-        padding-block: 20px;
-        width: 84%;
-
-        h3 {
-          display: flex;
-          align-items: center;
-          gap: 10px;
-          margin-bottom: 10px;
-        }
-
-        .info-card-content {
-          display: flex;
-          flex-direction: column;
-          gap: 20px;
-          width: 100%;
-          padding-block: 10px;
-          border-radius: 8px;
-          background-color: var(--app-background);
-          box-shadow: 0 0 14px var(--shadow-color);
-
-          .disk-usage {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            padding-inline: 10px;
-            gap: 10px;
-
-            .disk-usage-bar {
-              border: 3px solid #70caf2; /* Blue border */
-              background-color: #cecece; /* Free space color */
-            }
-
-            .usage {
-              height: 100%;
-              background-color: var(--orange); /* Used space color */
-              transition: width 0.5s ease-in-out;
-            }
-
-            p {
-              background-color: var(--purple);
-              height: 100%;
-              width: 100%;
-              display: flex;
-              justify-content: center;
-
-              color: white; /* Unmounted bar text color */
-            }
-
-            .not-mounted-bar {
-              border: none !important;
-              transition: width 0.5s ease-in-out;
-
-              p {
-                background-color: var(--purple);
-              }
-            }
-
-            /* When Remote has an Error */
-            .error-bar {
-              border: none !important;
-              transition: width 0.5s ease-in-out;
-
-              p {
-                background-color: var(--red);
-              }
-            }
-
-            .legend {
-              display: flex;
-              gap: 15px;
-              margin-top: 10px;
-            }
-
-            .legend-item {
-              display: flex;
-              align-items: center;
-              font-size: 14px;
-            }
-
-            .color-box {
-              width: 20px;
-              height: 20px;
-              border-radius: 5px;
-              display: inline-block;
-              margin-right: 5px;
-            }
-
-            .used {
-              background-color: var(--orange);
-            }
-
-            .free {
-              background-color: #cecece;
-            }
-
-            .border {
-              background-color: #70caf2;
-            }
-          }
-
-          .button-container {
-            display: flex;
-            justify-content: space-evenly;
-            gap: 10px;
-          }
-        }
-      }
-    }
-
-    .toggle-sidebar {
+    .sticky-sidebar-button {
       position: absolute;
-      top: 10px;
+      height: 100%;
       left: 10px;
-      background: none;
-      border: none;
-      cursor: pointer;
-      padding: 8px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      z-index: 10;
 
-      &:hover {
-        background: var(--hover-color);
+      .toggle-sidebar {
+        position: sticky;
+        top: 10px;
+        max-width: 40px;
+        max-height: 40px;
+        padding: 8px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+          background: var(--hover-color);
+        }
       }
     }
   }
