--- a/src/app/modals/preferences-modal/preferences-modal.component.scss
+++ b/src/app/modals/preferences-modal/preferences-modal.component.scss
@@ -1,10 +1,11 @@
 .preferences-modal {
   height: 100%;
-  background: var(--app-background);
+  background: var(--secondary-background);
   box-shadow: 0 4px 12px var(--shadow-color);
   display: flex;
   flex-direction: column;
   position: relative; /* Ensure absolute positioning works for children */
+  overflow: hidden; /* Hide overflow from children */
 
   .modal-header {
     display: flex;
@@ -20,37 +21,82 @@
     min-height: 42px;
     overflow-y: auto; /* Allow scrolling for content */
 
-      button {
-        color: var(--app-text-color);
-        background-color: transparent;
+    button {
+      color: var(--app-text-color);
+      background-color: transparent;
 
-        &.active {
-          background-color: #ddd;
-        }
-      }
-
-      .tabs {
-        display: flex;
-        gap: 2vw;
-        margin-inline: 16px;
-
-        button {
-          border-radius: 8px;
-        }
+      &.active {
+        background-color: var(--hover-color);
       }
     }
-  
-    .modal-content {
-      padding: 16px;
-      min-height: 200px;
-      overflow: hidden;
-      position: relative;
-  
-      .tab-content {
-        position: absolute;
-        width: 100%;
-        transition: transform 0.3s ease-in-out;
+
+    .tabs {
+      display: flex;
+      gap: 2vw;
+      margin-inline: 16px;
+
+      button {
+        border-radius: 8px;
       }
     }
   }
-  
+
+  .modal-content {
+    padding: 16px;
+    overflow: auto;
+    position: relative;
+    height: 100%;
+
+    .tab-content {
+      width: 100%;
+      transition: transform 0.3s ease-in-out;
+
+      .settings-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+
+        .setting-item {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          background: var(--app-background);
+          padding: 12px 16px;
+          border-radius: calc(var(--border-radius) * 2);
+          width: 90%;
+          box-shadow: 0 0 4px var(--shadow-color);
+
+          .setting-info {
+            display: flex;
+            flex-direction: column;
+            max-width: 60%;
+            strong {
+              font-size: 14px;
+              color: var(--app-text-color);
+
+              p {
+                font-size: 12px;
+                color: var(--secondary-text-color);
+                margin: 4px 0 0;
+              }
+            }
+          }
+          .setting-control {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+          }
+
+          .input-field {
+            width: 120px;
+          }
+
+          mat-slide-toggle {
+            margin-left: auto;
+          }
+        }
+      }
+    }
+  }
+}
