--- a/src/app/modals/quick-add-remote/quick-add-remote.component.html
+++ b/src/app/modals/quick-add-remote/quick-add-remote.component.html
@@ -1,40 +1,57 @@
 <div class="quick-add-modal">
+  <!-- 🔹 Modal Header -->
   <div class="modal-header" data-tauri-drag-region>
     <div class="header-content">
-      <button><img src="assets/icons/question.svg" class="icon icon-bw" /></button>
+      <button mat-icon-button class="help-btn">
+        <img src="assets/icons/question.svg" class="icon icon-bw" />
+      </button>
       <p>
         <img src="assets/icons/hard-drive.svg" class="icon icon-bw" />
         Quick Add Remote
       </p>
-      <button (click)="close()"><img src="assets/icons/circle-xmark.svg" class="icon icon-bw" /></button>
+      <button mat-icon-button (click)="close()">
+        <img src="assets/icons/circle-xmark.svg" class="icon icon-bw" />
+      </button>
     </div>
     <mat-divider></mat-divider>
   </div>
 
+  <!-- 🔹 Form -->
   <form class="form-group" [formGroup]="quickAddForm" (ngSubmit)="onSubmit()">
-    <!-- Remote Type Selection -->
-    <mat-form-field>
+    <!-- 🌟 Remote Type Selection -->
+    <mat-form-field class="full-width">
       <mat-label>Select Remote Type</mat-label>
       <mat-select formControlName="remoteType" (selectionChange)="onRemoteTypeChange()">
         <mat-option *ngFor="let remote of oauthSupportedRemotes" [value]="remote">
           {{ remote }}
         </mat-option>
       </mat-select>
+      <mat-error *ngIf="quickAddForm.get('remoteType')?.hasError('required')">
+        Remote type is required.
+      </mat-error>
     </mat-form-field>
 
-    <!-- Remote Name -->
-    <mat-form-field>
+    <!-- 🌟 Remote Name Input -->
+    <mat-form-field class="full-width">
       <mat-label>Remote Name</mat-label>
       <input matInput formControlName="remoteName" />
+      <mat-error *ngIf="quickAddForm.get('remoteName')?.hasError('required')">
+        Remote name is required.
+      </mat-error>
+      <mat-error *ngIf="quickAddForm.get('remoteName')?.hasError('nameTaken')">
+        This remote name already exists! Choose another name.
+      </mat-error>
     </mat-form-field>
 
-    <!-- Auto-Mount Checkbox -->
-    <mat-slide-toggle formControlName="autoMount">Auto-Mount after creation</mat-slide-toggle>
+    <!-- 🌟 Auto-Mount Checkbox -->
+    <mat-slide-toggle class="slide-toggle" formControlName="autoMount">
+      Auto-Mount after creation and on startup
+    </mat-slide-toggle>
 
-    <!-- Mount Path (shown if Auto-Mount is enabled) -->
-    <mat-form-field appearance="fill" *ngIf="quickAddForm.get('autoMount')?.value">
+    <!-- 🌟 Mount Path (Shown if Auto-Mount is enabled) -->
+    <mat-form-field appearance="fill" *ngIf="quickAddForm.get('autoMount')?.value" @slideInOut>
       <mat-label>Mount Path</mat-label>
-      <button mat-button matSuffix type="button" (click)="selectFolder()">
+      <button mat-button matSuffix type="button" (click)="selectFolder()" *ngIf="quickAddForm.get('autoMount')?.value">
         <img src="assets/icons/folder-white.svg" class="icon icon-bw" style="filter: invert(1);" />
       </button>
       <input matInput formControlName="mountPath" id="mountPath" />
@@ -43,16 +60,20 @@
       </mat-error>
     </mat-form-field>
 
+    <!-- 🌟 Action Buttons -->
+    <div class="button-group">
+      <button class="finish" mat-raised-button color="primary" type="submit" [disabled]="isLoading || quickAddForm.invalid">
+        <mat-spinner *ngIf="isLoading" diameter="20"></mat-spinner>
+        {{ isLoading ? 'Adding...' : 'Create Remote' }}
+      </button>
+      <button @slideInOut class="cancel" mat-stroked-button type="button" (click)="cancelAuth()" [disabled]="!isLoading" *ngIf="isLoading">
+        Cancel Authentication
+      </button>
+    </div>
 
-    <!-- Submit Button -->
-    <button class="finish" mat-raised-button type="submit" [disabled]="isLoading || quickAddForm.invalid">
-      {{ isLoading ? 'Adding...' : 'Create Remote' }}
-    </button>
-
-    <!-- Additional Message -->
-    <p *ngIf="isLoading" class="loading-message">Browser may be opened for authentication</p>
-
-    <!-- Error Message -->
-    <mat-error *ngIf="errorMessage">{{ errorMessage }}</mat-error>
+    <!-- 🔄 Additional Message (Loading) -->
+    <p *ngIf="isLoading" class="loading-message">
+      A browser window may open for authentication...
+    </p>
   </form>
-  </div>
+</div>
