--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -37,6 +37,26 @@ $rclone-manager-theme: mat.m2-define-light-theme(
 // that you are using.
 @include mat.all-component-themes($rclone-manager-theme);
 
+
+// Define the palettes for the dark theme
+$rclone-manager-dark-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$rclone-manager-dark-accent: mat.m2-define-palette(mat.$m2-blue-palette, A200, A100, A400);
+$rclone-manager-dark-warn: mat.m2-define-palette(mat.$m2-red-palette);
+
+// Create the dark theme object
+$rclone-manager-dark-theme: mat.m2-define-dark-theme(
+  (
+    color: (
+      primary: $rclone-manager-dark-primary,
+      accent: $rclone-manager-dark-accent,
+      warn: $rclone-manager-dark-warn,
+    ),
+    typography: mat.m2-define-typography-config(),
+    density: 0,
+  )
+);
+
+
 .light {
 
   /* Define custom colors for light mode */
@@ -59,6 +79,10 @@ $rclone-manager-theme: mat.m2-define-light-theme(
 }
 
 /* 🌙 Dark Theme */
+
+.dark {
+  @include mat.all-component-colors($rclone-manager-dark-theme);
+}
 .dark {
 
   /* Define custom colors for dark mode */
@@ -166,12 +190,13 @@ button {
     background-color: var(--orange);
   }
 
-
+  &.secondary,
   &.open,
   &.next {
     background-color: var(--blue);
   }
 
+  &.cancel,
   &.delete,
   &.unmount {
     background-color: var(--red);
