--- a/src/app/modals/remote-config-modal/remote-config-modal.component.scss
+++ b/src/app/modals/remote-config-modal/remote-config-modal.component.scss
@@ -41,21 +41,25 @@
   }
 
   .modal-content {
-    flex-grow: 1; /* Make the content take up remaining space */
+    flex-grow: 1;
     padding: 10px;
-    overflow-y: auto; /* Allow scrolling for content */
+    overflow: hidden;
+    position: relative;
     
     .step-container {
-      display: flex;
-      flex-direction: column;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
 
       form {
         display: flex;
         flex-direction: column;
         gap: 10px;
         padding: 10px;
-        border-radius: 5px;
-        margin-bottom: 10px;
+        overflow-y: auto;
+        height: calc(100% - 20px);
       }
     }
   }
