Enhance home component styles and update README for clarity; improve user guidance for adding remotes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
     <div class="add-remote" *ngIf="remotes.length === 0">
       <img src="../../assets/rclone-2.svg" alt="RClone Manager Secondary Icon" />
       <h2>RClone Manager</h2>
-      <p>Press the “Add New Remote” to add a new remote</p>
+      <p>Easily manage your RClone remotes. If you're new to RClone, use "Add Quick Remote" for a fast and simple setup.</p>
       <button (click)="openQuickAddRemoteModal()" class="secondary">
         <img src="assets/icons/add-white.svg" class="icon" /> Add Quick Remote
       </button>
